# video-gen-eval

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PERFORMANCE.md  README.md  SECURITY.md  pyproject.toml  requirements-docs.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: model_comparison.py
benchmarks/external_reports/: ivebench_example.json  tivibench_example.json  vbench_example.json
benchmarks/results/: example_results.json
docs/: Makefile  api.rst  conf.py  index.rst
embodied/: __init__.py  rl_action_api.py  task_evaluator.py  world_wrapper.py
evaluators/: __init__.py  ewm_score.py  ivebench_evaluator.py  physion_evaluator.py  tivibench_evaluator.py  vbench_evaluator.py
examples/: compare_models.py  example_notebook.ipynb  quick_start.py
judge/: __init__.py  anomaly_detector.py  physics_judge.py  rationale_generator.py
pipeline/: __init__.py  batch_processor.py  score_aggregator.py  unified_pipeline.py
tests/: test_evaluators.py  test_integration.py
tracking/: __init__.py  mlflow_tracker.py  wandb_tracker.py
