[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "video-gen-eval"
version = "0.1.0"
description = "Unified evaluation framework for generative video models with embodied world model scoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Chris Matteau"},
]

dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "gymnasium>=0.29.0",
    "qwen-vl-utils>=0.0.2",
    "transformers>=4.39.0",
    "mlflow>=2.11.0",
    "wandb>=0.16.0",
    "ffmpeg-python>=0.2.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["evaluators*", "judge*", "pipeline*", "embodied*", "tracking*", "benchmarks*"]
