[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "video-gen-eval"
version = "0.1.0"
description = "Unified evaluation framework for generative video models with embodied world model scoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Chris Matteau"},
]

dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "gymnasium>=0.29.0",
    "qwen-vl-utils>=0.0.2",
    "transformers>=4.39.0",
    "mlflow>=2.11.0",
    "wandb>=0.16.0",
    "ffmpeg-python>=0.2.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ruff>=0.4.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-autodoc-typehints>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end integration tests",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["docs", "examples/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"benchmarks/*" = ["E501"]
"examples/*" = ["E501"]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = "(^docs/|^examples/|^tests/)"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["evaluators*", "judge*", "pipeline*", "embodied*", "tracking*", "benchmarks*"]

[tool.setuptools.package-data]
benchmarks = ["py.typed"]
embodied = ["py.typed"]
evaluators = ["py.typed"]
judge = ["py.typed"]
pipeline = ["py.typed"]
tracking = ["py.typed"]
